# poke-parse

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
src/datapages/: main_page
src/parser/: mod.rs  parser.rs  stats_parser.rs
src/struct/pokemon/: mod.rs  pokemon.rs  pokemon_attacks.rs  pokemon_data.rs  pokemon_lang.rs  pokemon_misc.rs  pokemon_sprites.rs  pokemon_stats.rs
src/struct/pokemon/data/: kanto.rs  mod.rs
